# qubit-q

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.cowork/: Skills.toml
bindings/ios/MobileAIRuntime.xcframework/ios-arm64/Headers/: README.md
crates/device-profiler/: Cargo.toml
crates/device-profiler/src/: benchmark.rs  detect.rs  error.rs  lib.rs  profile.rs  recommender.rs
crates/http-server/: Cargo.toml
crates/http-server/src/: config.rs  error.rs  lib.rs  main.rs  server.rs  state.rs
crates/http-server/src/middleware/: auth.rs
crates/http-server/src/routes/: chat.rs  embeddings.rs  events.rs  health.rs  metrics.rs  mod.rs  models.rs  ui.rs
crates/inference-engine/: Cargo.toml
crates/inference-engine/src/: backend.rs  error.rs  lib.rs  llama_backend.rs  mlx_backend.rs  mock_backend.rs  streamer.rs  throttle.rs
crates/mai/: Cargo.toml
crates/mai/src/: cli.rs  main.rs
crates/memory-guard/: Cargo.toml
crates/memory-guard/src/: detector.rs  error.rs  guard.rs  lib.rs  monitor.rs  watermark.rs
crates/model-manager/: Cargo.toml
crates/model-manager/src/: downloader.rs  error.rs  eviction.rs  hub.rs  lib.rs  metadata.rs  registry.rs  verifier.rs
crates/platform-bridge/: Cargo.toml  cbindgen.toml
crates/platform-bridge/src/: c_api.rs
crates/runtime-core/: Cargo.toml
crates/runtime-core/src/: backends.rs  config.rs  error.rs  lib.rs  runtime.rs
flutter/: README.md  ffigen.yaml  pubspec.yaml
flutter/android/app/: build.gradle.kts
flutter/android/app/src/main/: AndroidManifest.xml
flutter/android/app/src/main/kotlin/com/example/mai_flutter/: MainActivity.kt
flutter/ios/Flutter/: Debug.xcconfig  Generated.xcconfig  MobileAIRuntimeFFI.xcconfig  Release.xcconfig  flutter_export_environment.sh
flutter/ios/Runner/: Info.plist
flutter/ios/Runner.xcodeproj/: project.pbxproj
flutter/ios/Runner.xcworkspace/xcuserdata/mac.xcuserdatad/: UserInterfaceState.xcuserstate
flutter/ios/Runner/BridgeHeaders/: MobileAIRuntime.h
flutter/ios/Runner/Frameworks/MobileAIRuntime.xcframework/: Info.plist
flutter/ios/Runner/Frameworks/MobileAIRuntime.xcframework/ios-arm64/Headers/: module.modulemap
flutter/ios/Runner/Frameworks/MobileAIRuntime.xcframework/ios-arm64_x86_64-simulator/Headers/: MobileAIRuntime.swift
flutter/ios/ios/Runner.xcodeproj/: project.pbxproj
flutter/lib/: main.dart
flutter/lib/src/features/chat/: chat_page.dart
flutter/lib/src/features/downloads/: downloads_page.dart
flutter/lib/src/features/models/: models_page.dart
flutter/lib/src/features/observability/: observability_page.dart
flutter/lib/src/ffi/: mai_bindings.dart
flutter/lib/src/runtime/: http_runtime.dart  mai_runtime.dart  models.dart  runtime_controller.dart  runtime_provider.dart
flutter/lib/src/shared/: formatters.dart  theme.dart
flutter/linux/: CMakeLists.txt
flutter/linux/runner/: my_application.cc
flutter/macos/Runner.xcodeproj/: project.pbxproj
flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter/macos/Runner/Configs/: AppInfo.xcconfig
flutter/test/: downloads_page_test.dart  runtime_models_test.dart  widget_test.dart
flutter/web/: index.html  manifest.json
flutter/windows/: CMakeLists.txt
flutter/windows/runner/: Runner.rc  main.cpp
models/: catalog.json
scripts/: build-android.sh  build-flutter-ffi.sh  build-ios-app.sh  build-ios.sh  flutter-link-ios.sh  setup-flutter-app.sh  setup-ios-app.sh  smoke-http-lan.sh
