[workspace]
members = [
    "crates/model-manager",
    "crates/memory-guard",
    "crates/inference-engine",
    "crates/runtime-core",
    "crates/mai",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2"
async-trait = "0.1"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
llama-cpp-2 = "0.1"
sysinfo = "0.33"
dirs = "6"

# Internal crates
model-manager = { path = "crates/model-manager" }
memory-guard = { path = "crates/memory-guard" }
inference-engine = { path = "crates/inference-engine", default-features = false }
runtime-core = { path = "crates/runtime-core", default-features = false }
