[package]
name = "device-profiler"
version = "0.1.0"
edition = "2021"

[dependencies]
model-manager = { workspace = true }
sysinfo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
