[package]
name = "inference-engine"
version = "0.1.0"
edition = "2021"

[features]
default = []
llama-backend = ["llama-cpp-2"]
mlx-backend = []
mock-backend = []

[dependencies]
model-manager = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
llama-cpp-2 = { workspace = true, optional = true }
