[package]
name = "platform-bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
llama-backend = [
    "runtime-core/llama-backend",
    "inference-engine/llama-backend",
    "device-profiler/llama-backend",
]

[dependencies]
runtime-core = { workspace = true, default-features = false }
inference-engine = { workspace = true, default-features = false }
model-manager = { workspace = true }
device-profiler = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = "3"
