[package]
name = "runtime-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
llama-backend = ["inference-engine/llama-backend"]
mlx-backend = ["inference-engine/mlx-backend"]
mock-backend = ["inference-engine/mock-backend"]

[dependencies]
model-manager = { workspace = true }
memory-guard = { workspace = true }
inference-engine = { workspace = true, default-features = false }
device-profiler = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
tempfile = "3"
